# x-bookmarks-panel

./: .env.example  .gitignore  .starter-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GOAL_RESULT.md  LICENSE  PRD.md  PROGRESS.md  README.md  README.pt-BR.md  healthcheck.sh  index.html  install-launchd.sh  playwright.config.ts  pyproject.toml  setup.sh  start.sh  stop.sh
.claude/: settings.json
.claude/hooks/: post-edit.sh  pre-commit.sh
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/copilot/: architect.agent.md  reviewer.agent.md  tdd.agent.md
.github/workflows/: ci.yml
.github/workflows.disabled/: dod.yml
.skills/: README.md
.skills/_template/: SKILL.md
.skills/conventional-commits/: SKILL.md
.skills/playwright-e2e/: SKILL.md
.specs/: README.md
.specs/architecture/: ADR-001-example.md  ADR-template.md  DESIGN.md  PATTERNS.md
.specs/journal/: README.md  _template.md
.specs/product/: DOMAIN.md  PERSONAS.md  VISION.md
.specs/sprints/: BACKLOG.md  task-template.md
.specs/sprints/sprint-01/: 01-example.task.md  SPRINT.md
.specs/workflow/: CONTRIBUTING.md  RELEASE.md  WORKFLOW.md
examples/: sample-relatorio.html
exports/: skills-for-grok.md  skills-items.csv  skills-items.md
presentation/: conceitos.md  slides.md
scripts/launchd/: panel.plist.template  watchdog.plist.template
server/: app.py  db.py  executor.py  importer.py
