[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "x-bookmarks-panel"
version = "0.4.0"
description = "Local panel for triaging x.com bookmarks: imports a curated HTML report into SQLite, renders cards, and dispatches Claude Code or the Claude desktop app on click."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["bookmarks", "x", "twitter", "triage", "claude", "flask", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = ["flask>=3.0"]

[project.urls]
Homepage = "https://github.com/wesleysimplicio/x-bookmarks-panel"
Repository = "https://github.com/wesleysimplicio/x-bookmarks-panel"
Issues = "https://github.com/wesleysimplicio/x-bookmarks-panel/issues"
Changelog = "https://github.com/wesleysimplicio/x-bookmarks-panel/blob/main/CHANGELOG.md"

[project.scripts]
bookmarks-panel = "bookmarks_panel.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.wheel.sources]
"server" = "bookmarks_panel"

[tool.hatch.build.targets.wheel.force-include]
"index.html" = "bookmarks_panel/static/index.html"
"examples/sample-relatorio.html" = "bookmarks_panel/static/sample-relatorio.html"

[tool.hatch.build.targets.sdist]
include = [
    "server/**/*.py",
    "index.html",
    "examples/sample-relatorio.html",
    "VERSION",
    "README.md",
    "README.pt-BR.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
